--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sync-alisdk",
   "author":"xuteng.xt@alibaba-inc.com",
-  "version": "2.0.5.1",
+  "original-version": "2.0.5",
+  "version": "2.0.6",
   "description": "Taobao Open API & Message Client.",
   "keywords": [
     "top",
