--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sync-alisdk",
-  "author":"xuteng.xt@alibaba-inc.com",
+  "author": "xuteng.xt@alibaba-inc.com",
   "original-version": "2.0.5",
-  "version": "2.0.9",
+  "version": "2.0.10",
   "description": "Taobao Open API & Message Client.",
   "keywords": [
     "top",
@@ -12,14 +12,18 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "form-data": "^0.2.0",
-    "mime": "~1.3.4",
-    "ws": "^0.4.32",
-    "iconv-lite":"^0.4.7",
-    "urlencode":"^1.1.0",
-    "request": "~2.72.0"
+    "form-data": "^2.3.2",
+    "iconv-lite": "^0.4.7",
+    "mime": "^2.3.1",
+    "request": "^2.88.0",
+    "urlencode": "^1.1.0",
+    "ws": "^6.0.0"
   },
   "engines": {
     "node": ">=0.8"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.0",
+    "utf-8-validate": "^5.0.1"
   }
 }
